[tool.poetry]
name = "kivy-ja-calendar"
version = "0.1.0"
description = ""
authors = ["mur6"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = {extras = ["base"], version = "^2.0.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
